# Seed

./: Cargo.toml  README.md
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
src/: commands.rs  handler.rs  lib.rs  store.rs
