[package]
name = "seed"
version = "1.0.0"
authors = ["poodz"]
description = "A permission plugin for Pumpkin MC"
edition = "2024"
rust-version = "1.89"

[lib]
crate-type = ["cdylib"]

[dependencies]
pumpkin = { git = "https://github.com/Pumpkin-MC/Pumpkin.git" }
pumpkin-api-macros = { git = "https://github.com/Pumpkin-MC/Pumpkin.git" }
pumpkin-data = { git = "https://github.com/Pumpkin-MC/Pumpkin.git" }
pumpkin-util = { git = "https://github.com/Pumpkin-MC/Pumpkin.git" }
tokio = { version = "1.49", features = ["macros", "rt-multi-thread", "sync"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"
uuid = { version = "1.20", features = ["serde"] }
